--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,49 @@ h3 {
   max-width: 95%;
 }
 
+@media (max-width: 1200px) {
+  h3{
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 900px) {
+  h1{
+    font-size: 40px;
+  }
+
+  h2{
+    font-size: 20px;
+  }
+
+  h3{
+    font-size: 16px;
+    margin-bottom: 5px;
+  }
+}
+
+@media (max-width: 700px) {
+  h1{
+    font-size: 30px;
+  }
+
+  h2{
+    font-size: 20px;
+  }
+
+  h3{
+    font-size: 14px;
+    margin-bottom: 3px;
+  }
+}
+
+@media (max-width: 400px){
+  h1{
+    font-size: 25px;
+    text-align: center;
+  }
+}
+
 .wrapper {
   max-width: 50%;
   align-self: center;
@@ -73,6 +116,47 @@ h3 {
   font-weight: 600;
 }
 
+@media (max-width: 1200px) {
+  .wrapper__description{
+    font-size: 14px;
+  }
+
+  .wrapper__picture-photo>img {
+    width: 80%;
+    height: 80%;
+    margin-left: 8%;
+  }
+
+  .wrapper__picture-caption {
+    font-size: 14px;
+    min-width: 85%; 
+  }
+}
+
+@media (max-width: 1069px) {
+  .wrapper__description{
+    font-size: 14px;
+    max-width: 95%;
+    margin-left: 3%;
+    margin-bottom: 5px;
+    border: none;
+  }
+
+  .wrapper__picture{
+    border: none;
+  }
+
+  .wrapper__picture-photo>img {
+    margin-left: 9%;
+    margin-bottom: 5px;
+  }
+
+  .wrapper__picture-caption {
+    font-size: 13px;
+    min-width: 85%; 
+  }
+}
+
 .wrapper__listName {
   align-self: flex-start;
   margin-left: 7%;
@@ -117,5 +201,68 @@ h3 {
 .footer__finalText-link:active {
   color: #136083f7;
   text-decoration: none;
+}
+
+@media (max-width: 900px) {
+  .wrapper__description{
+    font-size: 15px;
+    font-weight: 400;
+  }
+
+  .wrapper__listName{
+    font-size: 18px;
+  }
+
+  .wrapper__list-year{
+    font-size: 16px;
+  }
+
+  .footer__finalText{
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 700px) {
+  .wrapper__description{
+    font-size: 13px;
+    font-weight: 400;
+    margin-bottom: 0;
+  }
+
+  .wrapper__picture{
+    margin-bottom: 15px;
+  }
+
+  .wrapper__listName{
+    font-size: 16px;
+  }
+
+  .wrapper__list-year{
+    font-size: 14px;
+  }
+
+  .footer__finalText{
+    font-size: 12px;
+    text-align: center;
+  }
+}
+
+@media (max-width: 400px) {
+  .wrapper__description{
+    font-size: 12px;
+  }
+
+  .wrapper__picture-caption{
+    font-size: 12px;
+  }
+
+  .wrapper__list-year{
+    font-size: 12px;
+  }
+
+  .footer__finalText{
+    font-size: 11px;
+    text-align: center;
+  }
 }
  
